import("//build/buildflag_header.gni")
import("//build/config/android/config.gni")
import("//build/config/arm.gni")
import("//build/config/features.gni")
import("//build/config/linux/pkg_config.gni")
import("//build/config/ui.gni")
import("//media/media_options.gni")
import("//testing/libfuzzer/fuzzer_test.gni")
import("//testing/test.gni")
import("//third_party/ffmpeg/ffmpeg_options.gni")
import("//starboard/contrib/cast/cast.gni")
import("//starboard/shared/starboard/player/buildfiles.gni")

static_library("common") {
  cflags_cc = [
    "-Wno-sign-compare",
    "-Wno-c++98-compat-extra-semi",
    "-Wno-unreachable-code",
    "-Wno-unused-function",
    "-Wno-unused-variable",
    "-Wno-unreachable-code-return",
    "-Wno-unused-but-set-variable",
    "-Wno-unused-private-field",
  ]

  sources = [
    "common/condition_variable.cc",
    "common/condition_variable.h",
    "common/log.cc",
    "common/log.h",
    "common/media.cc",
    "common/media.h",
    "common/mutex.cc",
    "common/mutex.h",
    "common/optional.cc",
    "common/optional.h",
    "common/player.cc",
    "common/player.h",
    "common/recursive_mutex.cc",
    "common/recursive_mutex.h",
    "common/ref_counted.cc",
    "common/ref_counted.h",
    "common/semaphore.cc",
    "common/semaphore.h",
    "common/thread.cc",
    "common/thread.h",
    "common/thread_collision_warner.cc",
    "common/thread_collision_warner.h",
    "common/time.cc",
    "common/time.h",
  ]
}

component("starboard") {
  libs = []

  deps = [
    "//base",
    "//base:i18n",
    "//cc/paint",
    "//gpu/command_buffer/client:gles2_interface",
    "//gpu/command_buffer/common",
    "//third_party/libyuv",
    "//ui/events:events_base",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl:gl",
    "//url",
    ":common",

    "//third_party/opus",
  ]

  cflags_cc = [
    "-Wno-sign-compare",
    "-Wno-c++98-compat-extra-semi",
    "-Wno-unreachable-code",
    "-Wno-unused-function",
    "-Wno-unused-variable",
    "-Wno-unreachable-code-return",
    "-Wno-unused-but-set-variable",
  ]

  sources = [
    "player.h",

    "//starboard/android/shared/audio_decoder.cc",
    "//starboard/android/shared/audio_decoder.h",
    "//starboard/android/shared/audio_decoder_passthrough.h",
    "//starboard/android/shared/audio_renderer_passthrough.cc",
    "//starboard/android/shared/audio_renderer_passthrough.h",
    "//starboard/android/shared/audio_sink_get_max_channels.cc",
    "//starboard/android/shared/audio_sink_get_min_buffer_size_in_frames.cc",
    "//starboard/android/shared/audio_sink_get_nearest_supported_sample_frequency.cc",
    "//starboard/android/shared/audio_sink_is_audio_frame_storage_type_supported.cc",
    "//starboard/android/shared/audio_sink_is_audio_sample_type_supported.cc",
    "//starboard/android/shared/audio_sink_min_required_frames_tester.cc",
    "//starboard/android/shared/audio_sink_min_required_frames_tester.h",
    "//starboard/android/shared/audio_track_audio_sink_type.cc",
    "//starboard/android/shared/audio_track_audio_sink_type.h",
    "//starboard/android/shared/audio_track_bridge.cc",
    "//starboard/android/shared/audio_track_bridge.h",
    "//starboard/android/shared/configuration_constants.cc",
    "//starboard/android/shared/decode_target_create.cc",
    "//starboard/android/shared/decode_target_create.h",
    "//starboard/android/shared/decode_target_get_info.cc",
    "//starboard/android/shared/decode_target_internal.cc",
    "//starboard/android/shared/decode_target_internal.h",
    "//starboard/android/shared/decode_target_release.cc",
    "//starboard/android/shared/jni_env_ext.cc",
    "//starboard/android/shared/jni_env_ext.h",
    "//starboard/android/shared/jni_utils.h",
    "//starboard/android/shared/drm_create_system.cc",
    "//starboard/android/shared/drm_system.cc",
    "//starboard/android/shared/drm_system.h",
    "//starboard/android/shared/log.cc",
    "//starboard/android/shared/log_flush.cc",
    "//starboard/android/shared/log_format.cc",
    "//starboard/android/shared/log_internal.cc",
    "//starboard/android/shared/log_internal.h",
    "//starboard/android/shared/log_raw.cc",
    "//starboard/android/shared/max_output_buffers_lookup_table.cc",
    "//starboard/android/shared/max_output_buffers_lookup_table.h",
    "//starboard/android/shared/media_capabilities_cache.cc",
    "//starboard/android/shared/media_capabilities_cache.h",
    "//starboard/android/shared/media_codec_bridge.cc",
    "//starboard/android/shared/media_codec_bridge.h",
    "//starboard/android/shared/media_codec_bridge_eradicator.cc",
    "//starboard/android/shared/media_codec_bridge_eradicator.h",
    "//starboard/android/shared/media_common.h",
    "//starboard/android/shared/media_decoder.cc",
    "//starboard/android/shared/media_decoder.h",
    "//starboard/android/shared/media_get_audio_configuration.cc",
    "//starboard/android/shared/media_get_audio_output_count.cc",
    "//starboard/android/shared/media_get_initial_buffer_capacity.cc",
    "//starboard/android/shared/media_get_max_buffer_capacity.cc",
    "//starboard/android/shared/media_get_video_buffer_budget.cc",
    "//starboard/android/shared/media_is_audio_supported.cc",
    "//starboard/android/shared/media_is_buffer_pool_allocate_on_demand.cc",
    "//starboard/android/shared/media_is_supported.cc",
    "//starboard/android/shared/media_is_video_supported.cc",
    "//starboard/android/shared/media_settings_api.cc",
    "//starboard/android/shared/media_settings_api.h",
    "//starboard/android/shared/player_components_factory.cc",
    "//starboard/android/shared/player_components_factory.h",
    "//starboard/android/shared/player_create.cc",
    "//starboard/android/shared/player_destroy.cc",
    "//starboard/android/shared/player_get_maximum_number_of_samples_per_write.cc",
    "//starboard/android/shared/player_get_preferred_output_mode.cc",
    "//starboard/android/shared/player_set_bounds.cc",
    "//starboard/android/shared/player_set_max_video_input_size.cc",
    "//starboard/android/shared/player_set_max_video_input_size.h",
    "//starboard/android/shared/player_set_playback_rate.cc",
    "//starboard/android/shared/system_get_stack.cc",
    "//starboard/android/shared/thread_create_priority.cc",
    "//starboard/android/shared/video_decoder.cc",
    "//starboard/android/shared/video_decoder.h",
    "//starboard/android/shared/video_frame_tracker.cc",
    "//starboard/android/shared/video_frame_tracker.h",
    "//starboard/android/shared/video_max_video_input_size.cc",
    "//starboard/android/shared/video_max_video_input_size.h",
    "//starboard/android/shared/video_render_algorithm.cc",
    "//starboard/android/shared/video_render_algorithm.h",
    "//starboard/android/shared/video_window.cc",
    "//starboard/android/shared/video_window.h",

    "//starboard/shared/linux/thread_get_id.cc",

    "//starboard/shared/opus/opus_audio_decoder.cc",
    "//starboard/shared/opus/opus_audio_decoder.h",

    "//starboard/shared/posix/system_break_into_debugger.cc",

    "//starboard/shared/starboard/command_line.cc",
    "//starboard/shared/starboard/command_line.h",
    "//starboard/shared/starboard/log_mutex.cc",
    "//starboard/shared/starboard/log_mutex.h",
    "//starboard/shared/starboard/log_raw_dump_stack.cc",
    "//starboard/shared/starboard/log_raw_format.cc",

    "//starboard/shared/starboard/media/avc_util.cc",
    "//starboard/shared/starboard/media/avc_util.h",
    "//starboard/shared/starboard/media/codec_util.cc",
    "//starboard/shared/starboard/media/codec_util.h",
    "//starboard/shared/starboard/media/key_system_supportability_cache.cc",
    "//starboard/shared/starboard/media/key_system_supportability_cache.h",
    "//starboard/shared/starboard/media/media_util.cc",
    "//starboard/shared/starboard/media/media_util.h",
    "//starboard/shared/starboard/media/mime_supportability_cache.cc",
    "//starboard/shared/starboard/media/mime_supportability_cache.h",
    "//starboard/shared/starboard/media/mime_type.cc",
    "//starboard/shared/starboard/media/mime_type.h",
    "//starboard/shared/starboard/media/mime_util.cc",
    "//starboard/shared/starboard/media/mime_util.h",
    "//starboard/shared/starboard/media/parsed_mime_info.cc",
    "//starboard/shared/starboard/media/parsed_mime_info.h",
    "//starboard/shared/starboard/media/video_capabilities.cc",
    "//starboard/shared/starboard/media/video_capabilities.h",
    "//starboard/shared/starboard/media/vp9_util.cc",
    "//starboard/shared/starboard/media/vp9_util.h",

    "//starboard/shared/starboard/audio_sink/audio_sink_create.cc",
    "//starboard/shared/starboard/audio_sink/audio_sink_destroy.cc",
    "//starboard/shared/starboard/audio_sink/audio_sink_internal.cc",
    "//starboard/shared/starboard/audio_sink/audio_sink_internal.h",
    "//starboard/shared/starboard/audio_sink/audio_sink_is_valid.cc",
    "//starboard/shared/starboard/audio_sink/stub_audio_sink_type.cc",
    "//starboard/shared/starboard/audio_sink/stub_audio_sink_type.h",

    "//starboard/shared/starboard/player/filter/adaptive_audio_decoder_internal.cc",
    "//starboard/shared/starboard/player/filter/adaptive_audio_decoder_internal.h",
    "//starboard/shared/starboard/player/filter/audio_channel_layout_mixer.h",
    "//starboard/shared/starboard/player/filter/audio_channel_layout_mixer_impl.cc",
    "//starboard/shared/starboard/player/filter/audio_decoder_internal.h",
    "//starboard/shared/starboard/player/filter/audio_frame_discarder.cc",
    "//starboard/shared/starboard/player/filter/audio_frame_discarder.h",
    "//starboard/shared/starboard/player/filter/audio_frame_tracker.cc",
    "//starboard/shared/starboard/player/filter/audio_frame_tracker.h",
    "//starboard/shared/starboard/player/filter/audio_renderer_internal.h",
    "//starboard/shared/starboard/player/filter/audio_renderer_internal_pcm.cc",
    "//starboard/shared/starboard/player/filter/audio_renderer_internal_pcm.h",
    "//starboard/shared/starboard/player/filter/audio_renderer_sink.h",
    "//starboard/shared/starboard/player/filter/audio_renderer_sink_impl.cc",
    "//starboard/shared/starboard/player/filter/audio_renderer_sink_impl.h",
    "//starboard/shared/starboard/player/filter/audio_resampler.h",
    "//starboard/shared/starboard/player/filter/audio_resampler_impl.cc",
    "//starboard/shared/starboard/player/filter/audio_time_stretcher.cc",
    "//starboard/shared/starboard/player/filter/audio_time_stretcher.h",
    "//starboard/shared/starboard/player/filter/common.h",
    "//starboard/shared/starboard/player/filter/cpu_video_frame.cc",
    "//starboard/shared/starboard/player/filter/cpu_video_frame.h",
    "//starboard/shared/starboard/player/filter/decoded_audio_queue.cc",
    "//starboard/shared/starboard/player/filter/decoded_audio_queue.h",
    "//starboard/shared/starboard/player/filter/filter_based_player_worker_handler.cc",
    "//starboard/shared/starboard/player/filter/filter_based_player_worker_handler.h",
    "//starboard/shared/starboard/player/filter/interleaved_sinc_resampler.cc",
    "//starboard/shared/starboard/player/filter/interleaved_sinc_resampler.h",
    "//starboard/shared/starboard/player/filter/media_time_provider.h",
    "//starboard/shared/starboard/player/filter/media_time_provider_impl.cc",
    "//starboard/shared/starboard/player/filter/media_time_provider_impl.h",
    "//starboard/shared/starboard/player/filter/mock_audio_decoder.h",
    "//starboard/shared/starboard/player/filter/mock_audio_renderer_sink.h",
    "//starboard/shared/starboard/player/filter/player_components.cc",
    "//starboard/shared/starboard/player/filter/player_components.h",
    "//starboard/shared/starboard/player/filter/punchout_video_renderer_sink.cc",
    "//starboard/shared/starboard/player/filter/punchout_video_renderer_sink.h",
    "//starboard/shared/starboard/player/filter/stub_audio_decoder.cc",
    "//starboard/shared/starboard/player/filter/stub_audio_decoder.h",
    "//starboard/shared/starboard/player/filter/stub_player_components_factory.cc",
    "//starboard/shared/starboard/player/filter/stub_player_components_factory.h",
    "//starboard/shared/starboard/player/filter/stub_video_decoder.cc",
    "//starboard/shared/starboard/player/filter/stub_video_decoder.h",
    "//starboard/shared/starboard/player/filter/video_decoder_internal.h",
    "//starboard/shared/starboard/player/filter/video_frame_cadence_pattern_generator.cc",
    "//starboard/shared/starboard/player/filter/video_frame_cadence_pattern_generator.h",
    "//starboard/shared/starboard/player/filter/video_frame_internal.h",
    "//starboard/shared/starboard/player/filter/video_frame_rate_estimator.cc",
    "//starboard/shared/starboard/player/filter/video_frame_rate_estimator.h",
    "//starboard/shared/starboard/player/filter/video_render_algorithm.h",
    "//starboard/shared/starboard/player/filter/video_render_algorithm_impl.cc",
    "//starboard/shared/starboard/player/filter/video_render_algorithm_impl.h",
    "//starboard/shared/starboard/player/filter/video_renderer_internal.h",
    "//starboard/shared/starboard/player/filter/video_renderer_internal_impl.cc",
    "//starboard/shared/starboard/player/filter/video_renderer_internal_impl.h",
    "//starboard/shared/starboard/player/filter/video_renderer_sink.h",
    "//starboard/shared/starboard/player/filter/wsola_internal.cc",
    "//starboard/shared/starboard/player/filter/wsola_internal.h",

    "//starboard/shared/stub/system_symbolize.cc",
  ]

  sources += common_player_sources

  sources -= [
    "//starboard/shared/starboard/player/player_create.cc",
    "//starboard/shared/starboard/player/player_destroy.cc",
    "//starboard/shared/starboard/player/player_get_maximum_number_of_samples_per_write.cc",
    "//starboard/shared/starboard/player/player_get_preferred_output_mode_prefer_punchout.cc",
    "//starboard/shared/starboard/player/player_set_bounds.cc",
    "//starboard/shared/starboard/player/player_set_playback_rate.cc",
  ]
}
