# Copyright 2014 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//testing/test.gni")

test("storage_unittests") {
  deps = [
    "//components/file_access:test_support",
    "//storage/browser:unittests",
    "//storage/common:unittests",
  ]

  sources = []
  if (is_cobalt_hermetic_build) {
    sources += [ "//starboard/testing/sbeventhandle_from_main_with_args.cc" ]
  }

  if (is_ios) {
    deps += [ "//storage/test:test_bundle_data" ]
  } else {
    data = [ "//storage/test/data/" ]
  }
}
